--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "electron-vite-react",
+  "name": "health-code-statistics",
   "productName": "Electron",
   "private": true,
-  "version": "2.0.0",
-  "description": "Vite React Electron boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "version": "0.0.1",
+  "description": "统计组织中的健康码上传情况",
+  "author": "Linie <13236613225@163.com>",
   "license": "MIT",
   "main": "dist/electron/main/index.js",
   "scripts": {
