--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron-store": "^8.0.1"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.4",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^1.3.2",
